2002-08-16  Derek Price  <derek@ximbiot.com>

	* create_adm.c (Create_Admin): Assume RELATIVE_REPOS is set.
	* server.c (outside_root): Add comment.
	* options.h: Remove RELATIVE_REPOS & CVS_BADROOT.
	* sanity.sh: Remove a lot of !RELATIVE_REPOS cruft from tests.

2002-08-14  Derek Price  <oberon@umich.edu>

	* server.c (server): Dispose of the correct pointer.  Tidy comment.

2002-08-13  Derek Price  <oberon@umich.edu>

	* client.c (get_cvs_port_number): Fix typo in comment.  Add comments.
	* server.c (server): Fix a FIXME.  Remove an errant "const" directive.
	Remove some redundant memory allocation and error handling code.

2002-08-08  Derek Price  <oberon@umich.edu>

	* import.c (import): Surrounded `server_active' with
	#ifdef SERVER_SUPPORT/#endif.
	* commit.c (commit_fileproc, commit_direntproc): Likewise.
	(Patch from John Tytgat  <John.Tytgat@aaug.net>.)

2002-07-31  Derek Price  <oberon@umich.edu>

	* filesubr.c: Add a line so VIM can determine tab stops and shift widths.
	* root.c: Ditto.
	* (parse_cvsroot): Add comments and tidy slightly.

2002-07-31  Derek Price  <oberon@umich.edu>

	* sanity.sh: Add another date to the comment about rcs2-7 failing.

2002-07-26  Jim Meyering  <meyering@lucent.com>

	* commit.c (find_fileproc): When committing in client mode,
	arrange to fail if a `cvs add'ed file no longer exists in the
	working directory.
	* sanity.sh (commit-add-missing): New test for above.

2002-07-25  Larry Jones  <lawrence.jones@eds.com>

	* sanity.sh: Set $TMPDIR if it's not already set and use it rather
	than /tmp for the expected server temp directory path.

2002-07-09  Larry Jones  <lawrence.jones@eds.com>

	* vers_ts.c (time_stamp_server, time_stamp): Eliminate unneeded
	struct_tm copying.

	* lock.c (lock_wait, lock_obtained): Display time in UTC if possible
	to reduce confusion in client/server mode.
	(Original patch from Eduardo Perez Ureta <eperez@it.uc3m.es>.)

2002-06-26  Larry Jones  <lawrence.jones@eds.com>
