@@ -1,3 +1,8 @@
+2002-08-28  Larry Jones  <lawrence.jones@eds.com>
+
+	* logmsg.c (do_editor): Fix bug which prevented reusing log messages.
+	(Reported by Eric Siegerman <erics@telepres.com>.)
+
 2002-08-16  Derek Price  <derek@ximbiot.com>
 
 	* create_adm.c (Create_Admin): Assume RELATIVE_REPOS is set.
